# f-graph

./: CLAUDE.md  Cargo.toml  README.md
crates/f-graph/: CLAUDE.md  Cargo.toml  README.md
crates/f-graph/src/: graph_node.rs  heap_node.rs  lib.rs  main.rs
crates/npm-repo-walker/: Cargo.toml
crates/npm-repo-walker/src/: dependency.rs  lib.rs  main.rs  package.rs  resolver.rs
src/: f_graph.rs  lib.rs  main.rs  runner.rs
