[package]
name = "npm-repo-walker"
version = "0.1.0"
edition = "2024"

[dependencies]
f-graph = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lru = "0.12"
dashmap = "6.1" 
num_cpus = "1.16"
string-interner = "0.17"

[dev-dependencies]
tempfile = "3.0"